<resources>
    <string name="app_name">Fpam</string>
    <string name="title_activity_main">Fpam</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_clear">Clear All</string>
    <string name="navigation_settings">Settings</string>
    <string name="title_export_database">Export Database</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="key_spammers">key_spammers</string>

    <string name="text_empty_posts">No Posts To Display</string>
    <string name="text_no_spammers">No topSpammers added yet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="placeholder_group_name">Placeholder Group Name</string>
    <string name="placeholder_user_name">User Name</string>
    <string name="placeholder_updated_time">Updated Time</string>
    <string name="placeholder_message">Message</string>
    <string name="placeholder_name">Vladimir Makarov</string>
    <string name="placeholder_email">vivek.officialr@gmail.com</string>
    <string name="action_clear_group">Clear All Posts In Group</string>
    <string name="placeholder_setting_title">Setting Title</string>
    <string name="placeholder_setting_summary">This is the summary of our setting</string>

    <string name="text_summary_keywords">Posts with topKeywords are considered spam</string>
    <string name="pref_summary_scan_frequency">Every 2 hours</string>
    <string name="text_permission_declined">Permission Declined</string>
    <string name="request_permission_sentence_1">1. Fpam would love to have your approval to access your email address and list of groups you manage on Facebook</string>
    <string name="request_permission_sentence_2">2. Fpam uses your email address to sync all your app settings. Fpam won\'t spam you</string>
    <string name="request_permission_sentence_3">3. Fpam will let you manage your groups from the app to control spam</string>
    <string name="request_permission_sentence_4">4. Fpam won\'t post anywhere without asking you</string>
    <string name="key_scan_frequency">key_scan_frequency</string>
    <string name="key_cache_size">key_cache_size</string>
    <string name="title_activity_post">Post</string>
    <string name="handle_expanded">Read More</string>

    <!-- TODO: Remove or change this placeholder compositeGroupOrderId -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_keywords">Keywords</string>
    <string name="title_activity_activity_keywords">Keywords</string>
    <string name="hint_keyword">Example \"100% free\"</string>
    <string name="title_dialog_applicable_groups">Which groups include \"%1$s\"</string>
    <string name="loading">We are testing your patience</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message_invalid_post">Sorry, we did not get the button on this post to delete</string>
    <string name="login_error">Oops, The Engine Blew Up!</string>
    <string name="login_with_facebook">Login With Facebook</string>

    <string-array name="tabs">
        <item>Posts</item>
        <item>Stats</item>
    </string-array>
</resources>
