<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/placeholder_user_name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/updated_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/placeholder_updated_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorTextSecondary" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updated_time"
        android:ellipsize="marquee"
        android:maxLines="5"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/placeholder_message"
        android:textColor="@color/colorTextPrimary" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimaryLight"
        android:scaleType="centerCrop" />
</RelativeLayout>
